# ProtoApp

./: .gitignore  CMakeLists.txt  build.bat
build_desktop/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
build_web/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
docs/: index.html  index.js  index.wasm
emscripten_html_template/: centered.html  fullscreen_template.html  template.html
libs/raylib/include/: raylib.h
src/: canvas_item.cpp  canvas_item.hpp  canvas_manager.cpp  canvas_manager.hpp  canvas_navigator.cpp  canvas_navigator.hpp  canvas_node.cpp  canvas_node.hpp  canvas_renderer.cpp  canvas_renderer.hpp  data_manager.cpp  data_manager.hpp  globals.hpp  main.cpp  main_bu.cpp  r_tree.cpp  r_tree.hpp
src/ecs/: canvas_item.cpp  canvas_item.hpp  draggable_rect.cpp  draggable_rect.hpp
